skill-management-system/k8s/app/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: skill-management-system-dev
  labels:
    name: skill-management-system-dev
    environment: development
    app.kubernetes.io/part-of: skill-management-system
